update use prompts model without capabilites on tools call

--- a/webview-chat/src/app/container/chat-container/message/message.component.scss
+++ b/webview-chat/src/app/container/chat-container/message/message.component.scss
@@ -1,6 +1,6 @@
 .message-container {
   display: flex;
-  text-justify: distribute-all-lines;
+  text-justify: distribute-all-lines !important;
 }
 
 .user-message {
@@ -34,4 +34,3 @@
   overflow-x: auto;
   border: 1px solid #404040;
 }
-
